--- a/inicio.html
+++ b/inicio.html
@@ -204,7 +204,7 @@
 
         </div>
         <div class="row justify-content-center" style="margin: 0 auto">
-                <a href="https://maps.app.goo.gl/rws3DJR4YkXdLhk77" class="btnComoLlegar col-7 mb-5"><i class="fas fa-location-arrow mr-2"></i> VER EN GPS</a>  
+                <a href="https://maps.app.goo.gl/1asBNWg3hhoDAVTv7?g_st=iw" class="btnComoLlegar col-7 mb-5"><i class="fas fa-location-arrow mr-2"></i> VER EN GPS</a>  
             </div>
    
 </div>
@@ -230,7 +230,7 @@
         </div> 
   
             <div class="row justify-content-center ml-1" style="margin: 0 auto">
-                <a href="https://maps.app.goo.gl/y12G1tPAnzcepa5v7" class="btnComoLlegar btn-dark col-7 mb-5"><i class="fas fa-location-arrow mr-2"></i> VER EN GPS</a>  
+                <a href="https://maps.app.goo.gl/YeE9X9u3fvAe1CGC6?g_st=iw" class="btnComoLlegar btn-dark col-7 mb-5"><i class="fas fa-location-arrow mr-2"></i> VER EN GPS</a>  
             </div>
 
 
