--- a/inicio.html
+++ b/inicio.html
@@ -149,7 +149,7 @@
          <p id="textolibre" style="  font-family: 'Playfair Display', serif; font-size:15px; margin-top: -200px; text-shadow: 0px 1px 10px rgba(0,0,0,0.4);" class='tespero col-10 col-md-5 mb-5 text-center text-white' >El mejor tipo de amor es aquel que despierta el alma y nos hace aspirar a más, nos enciende el corazón y nos trae paz a la mente, y eso es lo que tú me has dado.</p> 
         </div> 
 
-<div class="row justify-content-center " style="margin: 0 auto; background-color:#d9b1ac ;">
+<div class="row justify-content-center " style="margin: 0 auto; background-color:#f6d1c9 ;">
 
          <p id="textolibre2" style="  font-family: 'Arapey', serif; font-weight: 400;font-style: normal; font-size:16px; color:#262a31; letter-spacing:3px; line-height: 1.2; font-weight: 700;" class='tespero col-10 col-md-7 mt-4 mb-4 text-left' >EXCLUSIVA: DOS ALMAS, UNA HISTORIA, Y UN GRAN "SÍ"</p> 
         </div> 
@@ -175,7 +175,7 @@
         <br><br>
         
 </div>
-<div class="container col-12" style="background-color:#d9b1ac "><br><br><br>
+<div class="container col-12" style="background-color:#f6d1c9 "><br><br><br>
     <h5 class='dondeyCuando col-12 col-lg-12 mt-0 mb-0 text-center' style="color:#262a31" >¿DÓNDE?</h5> 
         <div class="text-center "> 
         <img class="text-center col-5 col-md-3 ml-2" style="margin-bottom: -30px; z-index:1000" src="img/ornamenta2.png" > 
@@ -301,7 +301,7 @@
       
 </div>
 
-<div class="container col-12" style="background-color: #d9b1ac; margin-top: -10px;"><br><br><br>
+<div class="container col-12" style="background-color: #f6d1c9; margin-top: -10px;"><br><br><br>
       <h5 class='dondeyCuando col-12 col-lg-12 text-center  mb-0' style="color:#262a31; font-size:20px">CONFIRMAR ASISTENCIA</h5> 
       <div class="text-center "> 
         <img class="text-center col-5 col-md-3 mt-2 mb-4" src="img/ornamenta2.png" > 
